--- a/hoo-backend/package.json
+++ b/hoo-backend/package.json
@@ -1,6 +1,23 @@
 {
   "name": "hoo-backend",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+  "main": "src/index.ts",
+  "license": "MIT",
+  "scripts": {
+    "start": "ts-node src/index.ts",
+    "migrate": "prisma migrate dev"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.3.0",
+    "express": "^4.18.2",
+    "node-cron": "^3.0.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.6.0",
+    "@types/node-cron": "^3.0.8",
+    "prisma": "^5.3.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
+  }
 }
