--- a/hoo-frontend/package.json
+++ b/hoo-frontend/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@types/react": "~18.2.14",
+    "axios": "^1.5.0",
     "expo": "~49.0.10",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
@@ -20,6 +21,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.13.0",
+    "react-query": "^3.39.3",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
