--- a/hoo-backend/package.json
+++ b/hoo-backend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@prisma/client": "^5.3.0",
     "express": "^4.18.2",
+    "firebase-admin": "^11.10.1",
     "node-cron": "^3.0.2"
   },
   "devDependencies": {
