--- a/hoo-frontend/package.json
+++ b/hoo-frontend/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@react-native-community/slider": "^4.4.3",
     "@react-native-picker/picker": "^2.5.0",
+    "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
-    "@react-native-masked-view/masked-view": "^0.2.9",
     "@types/react": "~18.2.14",
     "axios": "^1.5.0",
     "expo": "~49.0.10",
@@ -26,7 +26,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.13.0",
     "react-query": "^3.39.3",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "use-debounce": "^9.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
