--- a/hoo-backend/package.json
+++ b/hoo-backend/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.3.0",
+    "expo-server-sdk": "^3.7.0",
     "express": "^4.18.2",
-    "firebase-admin": "^11.10.1",
     "node-cron": "^3.0.2"
   },
   "devDependencies": {
