--- a/hoo-frontend/app.json
+++ b/hoo-frontend/app.json
@@ -25,6 +25,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "eb09702e-84b4-4ea1-acd7-a7659b613c27"
+      }
     }
   }
 }
