--- a/hoo-frontend/package.json
+++ b/hoo-frontend/package.json
@@ -17,6 +17,8 @@
     "@types/react": "~18.2.14",
     "axios": "^1.5.0",
     "expo": "~49.0.10",
+    "expo-constants": "^15.0.0",
+    "expo-device": "^5.6.0",
     "expo-notifications": "~0.20.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
