--- a/hoo-backend/package.json
+++ b/hoo-backend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.3.0",
+    "axios": "^1.5.0",
     "expo-server-sdk": "^3.7.0",
     "express": "^4.18.2",
     "node-cron": "^3.0.2"
