--- a/hoo-frontend/package.json
+++ b/hoo-frontend/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@react-native-community/slider": "^4.4.3",
-    "@react-native-picker/picker": "^2.5.0",
     "@react-native-masked-view/masked-view": "^0.2.9",
+    "@react-native-picker/picker": "^2.5.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@types/react": "~18.2.14",
@@ -32,7 +32,8 @@
     "use-debounce": "^9.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react-native": "^0.72.2"
   },
   "private": true
 }
