--- a/hoo-frontend/package.json
+++ b/hoo-frontend/package.json
@@ -22,6 +22,7 @@
     "expo-device": "^5.6.0",
     "expo-notifications": "~0.20.1",
     "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "~12.3.2",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
